# ocaml-harfbuzz

./: .gitmodules  CONTRIBUTING.md  Makefile  README.md  dune-project  harfbuzz.opam  ocaml-harfbuzz.opam
example/: dune  render_string.ml
src/: c.ml  dune  harfbuzz.ml  harfbuzz.mli  ocaml_harfbuzz.mli
src/c/: dune  generate_c_functions.ml  generate_ml_functions.ml  generate_types_start.ml  harfbuzz_c_function_descriptions.ml  harfbuzz_c_type_descriptions.ml  harfbuzz_c_types.ml  helpers.c  helpers.h
test/: dune  harfbuzz_test.ml  ocaml_harfbuzz_test.ml
